[package]
name = "Rock"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"

#Scripting
mlua = { version = "0.4.2", features = ["luajit", "vendored"] }

#Windowing and graphics
sdl2 = { version = "0.33", features = ["bundled"] }
# luminance-sdl2 = { path = "../luminance-sdl2" }
luminance-sdl2 = { git = "https://github.com/Lucky4Luuk/luminance-sdl2.git", branch = "main" }
luminance-gl = ">=0.15, <0.17" #Same version as luminance-sdl2
luminance-windowing = "0.9.3"
luminance = "0.43.1"

#UI
imgui = "0.4.0"
imgui-sdl2 = "0.10.0"
imgui-opengl-renderer = "0.8.0"

#Math
glam = "0.11.2"

#Serializing
serde = "1.0.118"
bincode = "1.3.1"

#Model loading
gltf = "0.15.2"

#Shaders
# shader-prepper = "0.2.0"

#Logging
log = "*"
pretty_env_logger = "0.4.0"
